syntax = "proto3";

option csharp_namespace = "gRPC_Client";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Ping (PingRequest) returns (PongReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message PingRequest {
	string msg = 1;
}
message PongReply {
	string msg = 1;
}